Fri Feb 18 21:03:23 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * README:
        * tools/modeling/README.dev:

          Updates to prepare for release 2.3 of OpenDDS.

Fri Feb 18 20:56:21 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/toc.html:

          Removed samples section.

        * tools/modeling/plugins/org.opendds.modeling.help/html/samples:
        * tools/modeling/plugins/org.opendds.modeling.help/html/samples/maintopic.html:

          Removed these files.

Fri Feb 18 20:32:37 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/authoring_guide.html:
        * tools/modeling/plugins/org.opendds.modeling.help/html/gettingstarted/maintopic.html:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/concepts/modeling.html:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/workingwithdiagrams.html:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/tasks/workingwithopenddsmodels.html:
        * tools/modeling/plugins/org.opendds.modeling.help/html/toc.html:
        * tools/modeling/plugins/org.opendds.modeling.help/toc.xml:
        * tools/modeling/plugins/org.opendds.modeling.help/tocgettingstarted.xml:
        * tools/modeling/plugins/org.opendds.modeling.help/toctasks.xml:

          Replaced "OpenDDS SDK" with "OpenDDS Modeling SDK" or in some cases
          "OpenDDS SDK model" with "OpenDDS model".

Fri Feb 18 19:39:23 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/concepts/modeling.html:

          Added screenshot of modeling tool.

        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/datalib_type_shortcut_example.png:
        * tools/modeling/plugins/org.opendds.modeling.help/html/modeling/images/opendds_modeling_editors_examples.png: